# beam-ml

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  test.yml
api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py
data/material_properties/: material_properties.csv
data/processed/: lpbf_enriched_v1.csv
data/raw/: Barrionuevo_et_al_dataset.xlsx
models/: feature_schema.json
models/param_recommender/: hatch_space_mm_q10.pkl  hatch_space_mm_q90.pkl  laser_power_w_q10.pkl  laser_power_w_q90.pkl  layer_thickness_mm_q10.pkl  layer_thickness_mm_q90.pkl  scan_speed_mm_s_q10.pkl  scan_speed_mm_s_q90.pkl  schema.json
models/production/: MLmodel  conda.yaml  metadata.json  model.pkl  python_env.yaml  registered_model_meta
reports/: feature_ranges.csv  feature_space_stats.json
scripts/: analyse_best_model.py  analyse_feature_space.py  build_docker.bat  build_docker.sh  export_production_model.py  register_model.py  train_density_analysis_model.py  train_param_recommender.py  tune_random_forest.py  tune_xgboost.py
src/: config.py  logging_config.py
src/data/: add_thermophysical_properties.py  dataset_validation.py  feature_analysis.py  load.py
src/features/: engineering.py
src/models/: __init__.py  inference.py  param_recommender.py  train.py
tests/: __init__.py  conftest.py  test_api.py  test_feature_engineering.py  test_inference.py
