[project]
name = "lpbf-ml-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.18.0",
    "mlflow>=3.8.1",
    "polars>=1.36.1",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
]

[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]