[project]
name = "lpbf-ml-system"
version = "0.1.0"
description = "LPBF density prediction ML system"
readme = "README.md"
requires-python = ">=3.12"

# Core dependencies
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
    "mlflow>=3.8.1",
]

# Optional dependencies
[project.optional-dependencies]
# Training and data analysis
training = [
    "fastexcel>=0.18.0",
    "matplotlib>=3.7.0",
    "polars>=1.36.1",
]

# API
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
]

# Development and local testing
dev = [
    "gradio>=5.0.0",
    "pytest>=7.0.0",
]

[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]